// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailList should display a list of emails 1`] = `
<DocumentFragment>
  <div
    class="max-w-3xl mx-auto p-6 bg-white rounded-lg shadow-md"
  >
    <h2
      class="text-xl font-semibold mb-4"
    >
      Email List
    </h2>
    <div>
      <div
        class="flex items-center justify-between p-4 mb-2 border rounded bg-gray-50 hover:bg-gray-100 cursor-pointer transition hover:shadow"
      >
        <div>
          <p
            class="font-semibold text-gray-800"
          >
            <a
              data-testid="email-list-sender-1"
              href="#"
            >
              John Smith
            </a>
          </p>
          <p
            class="text-gray-600"
          >
            <a
              data-testid="email-list-subject-1"
              href="#"
            >
              Test Subject 1
            </a>
          </p>
        </div>
        <p
          class="text-sm text-gray-600"
          data-testid="email-list-timestamp-1"
        >
          12/31/2022, 6:00:00 PM
        </p>
      </div>
      <div
        class="flex items-center justify-between p-4 mb-2 border rounded bg-gray-50 hover:bg-gray-100 cursor-pointer transition hover:shadow"
      >
        <div>
          <p
            class="font-semibold text-gray-800"
          >
            <a
              data-testid="email-list-sender-2"
              href="#"
            >
              Jane Doe
            </a>
          </p>
          <p
            class="text-gray-600"
          >
            <a
              data-testid="email-list-subject-2"
              href="#"
            >
              Test Subject 2
            </a>
          </p>
        </div>
        <p
          class="text-sm text-gray-600"
          data-testid="email-list-timestamp-2"
        >
          1/2/2023, 12:00:00 AM
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmailList should display loading state initially 1`] = `
<DocumentFragment>
  <div
    class="max-w-3xl mx-auto p-6 bg-white rounded-lg shadow-md"
  >
    <h2
      class="text-xl font-semibold mb-4"
    >
      Email List
    </h2>
    <p
      class="text-gray-600"
    >
      Loading emails...
    </p>
  </div>
</DocumentFragment>
`;
